Improve styling, UX and fix bugs with content overlaping chat window

--- a/style.css
+++ b/style.css
@@ -1,3 +1,38 @@
+html {
+	min-height: 100%;
+}
+
+body {
+	min-height: 100%;
+	background: rgba(255,255,255,1);
+	background: -moz-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%);
+	background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(255,255,255,1)), color-stop(100%, rgba(242,242,242,1)));
+	background: -webkit-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%);
+	background: -o-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%);
+	background: -ms-linear-gradient(top, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%);
+	background: linear-gradient(to bottom, rgba(255,255,255,1) 0%, rgba(242,242,242,1) 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#f2f2f2', GradientType=0 );
+}
+
 #messages {
 	height: 300px;
+	padding: 0;
+	overflow: auto;
+}
+
+.chat-message {
+	padding: 5px 10px 5px 10px;
+	word-wrap: break-word;
+}
+
+.chat-message:nth-child(even) {
+	background: rgba(251,251,251,1);
+}
+
+#status {
+	padding: 5px;
+	-webkit-transition: all 0.5s ease;
+    -moz-transition: all 0.5s ease;
+    -o-transition: all 0.5s ease;
+    transition: all 0.5s ease;
 }
